--- a/style.css
+++ b/style.css
@@ -108,32 +108,47 @@ span{margin: 13px;}
     margin: 12px;
 }
 
-@media only screen and (max-width:320px){
-    .flexible-container{
+@media only screen and (min-width: 391px) and (max-width : 819px){
+    .flexible-container,.Container{
         width: 100%;
         
 
     }
+    .product .product-img:hover img{
+        transform: scale(1.2);
+        transition: transform 2s;
+        
+        
+       
+    }
     
-    .products,.product-detail{
+    .products,.tops,.product-detail,.last{
         grid-template-columns: repeat(1,1fr);
     }
-    .product{
+    .product,.top,.lastline{
         flex-direction: column;
+
     }
     footer{
         width: 100%;
     }
 }
 
-@media only screen and (min-width: 577px) and (max-width : 768px){
-    .Container{
+@media only screen and (min-width: 820px) and (max-width : 1180px){
+    .flexible-container,.Container{
         width: 100%;
     }
-    .products,.product-detail{
+    .product .product-img:hover img{
+        transform: scale(1.2);
+        transition: transform 2s;
+        
+        
+       
+    }
+    .products,.tops,.product-detail,.last{
         grid-template-columns: repeat(2,1fr);
     }
-    .product{
+    .product,.top,.lastline{
         flex-direction: column;
     }
     footer{
@@ -141,15 +156,30 @@ span{margin: 13px;}
     }
 }
 
-@media only screen and (min-width: 769px) and (max-width : 1400px){
-    .Container{
+@media only screen and (min-width: 1180px) and (max-width : 1400px){
+    .flexible-container,.Container{
         width: 100%;
     }
-    .products,.product-detail{
+    .products,.tops,.product-detail,.last{
         grid-template-columns: repeat(4,1fr);
     }
     
     footer{
         width: 100%;
     }
+}
+
+.im img{
+    margin-right: 30px;
+}
+.last{
+    display: flex;
+}
+
+.lastline{
+    margin: 40px;
+}
+
+.lastline img{
+    align-items: right;
 }
